iniciando session client com credenciais do arquivo (gitignorado)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .DS_Store
 newagent-7d078-65fdc9af8063.json
+smart-home-1-6c30f-b1024858ceb7.json
 say.mp3
+.vscode
+pytcc.code-workspace
+credentials
