--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,6 @@ chardet==3.0.4
 Click==7.0
 cycler==0.10.0
 dialogflow==0.6.0
-Flask==1.0.2
 google-api-core==1.11.1
 google-auth==1.6.3
 googleapis-common-protos==1.6.0
@@ -24,6 +23,7 @@ matplotlib==3.0.3
 nltk==3.4
 numpy==1.16.2
 playsound==1.2.2
+pocketsphinx==0.1.15
 protobuf==3.8.0
 pyasn1==0.4.5
 pyasn1-modules==0.2.5
@@ -136,3 +136,4 @@ urllib3==1.24.1
 watson-developer-cloud==2.10.1
 websocket-client==0.48.0
 Werkzeug==0.15.2
+flask==1.0.2
