--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ protobuf==3.9.0
 pyasn1==0.4.6
 pyasn1-modules==0.2.6
 PyAudio==0.2.11
+pygame==1.9.6
 pyobjc-core==5.2
 pyobjc-framework-Cocoa==5.2
 pytz==2019.2
@@ -27,3 +28,4 @@ six==1.12.0
 soupsieve==1.9.2
 SpeechRecognition==3.8.1
 urllib3==1.25.3
+venvdotapp==19.7.1
